package br.com.jogamptest.main;

public final class FloatColorPalette
{
	public static final FloatColor BLACK = new FloatColor(0,0,0,1);
	public static final FloatColor WHITE = new FloatColor(1,1,1,1);
	public static final FloatColor RED = new FloatColor(1,0,0,1);
	public static final FloatColor GREEN = new FloatColor(0,1,0,1);
	public static final FloatColor BLUE = new FloatColor(0,0,1,1);
	public static final FloatColor ROXY = new FloatColor(1f,.0f,1f,1);
	public static final FloatColor YELLOW = new FloatColor(1f,1f,.0f,1);

	private FloatColorPalette()
	{

	}
}
