package br.com.jogamptest.main;

public final class GameCamera2D
{
	public float x;
	public float y;

	public GameCamera2D()
	{
		x = 1;
		y = 0;
	}
}
