package br.com.jogamptest.main;

public final class IntColorPalette
{
	public static final IntColor BLACK = new IntColor(0,0,0,255);
	public static final IntColor WHITE = new IntColor(255,255,255,255);
	public static final IntColor RED = new IntColor(255,0,0,255);
	public static final IntColor GREEN = new IntColor(0,255,0,255);
	public static final IntColor BLUE = new IntColor(0,0,255,255);
	public static final IntColor ROXY = new IntColor(255,0,255,255);
	public static final IntColor YELLOW = new IntColor(255,255,0,255);

	private IntColorPalette()
	{

	}
}
